<resources>
    <string name="app_name">KotlinPlate</string>
    <string name="empty" />

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="action_subscribe">Sign me in</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">Skip</string>

    <string name="nav_featured">Featured</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>

    <string name="section_title_participate">Spread the word</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>

    <string name="text_empty_title">Nothing here</string>
    <string name="text_empty_subtitle">Try latter</string>
    <string name="text_share_app">Share \"KtBoilerplate\" with friends</string>
    <string name="text_share_app_title">Android KtBoilerplate</string>

    <string name="action_search">Search</string>

    <string name="title_activity_splash">Splash</string>

    <string name="intro_title">Subscribe</string>
    <string name="intro_message">Subscribe to receive notifications</string>

    <string name="hint_enter_email">E-mail address</string>

    <string name="url_play_store" translatable="false">https://play.google.com/store/apps/details?id=APP_ID_HERE</string>
    <string name="url_market" translatable="false">market://details?id=APP_ID_HERE</string>
    <string name="error_general_title">Error</string>

    <string name="about_tab_credits">Credits</string>
    <string name="about_tab_info">About</string>

</resources>
