<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_featured"
            android:checked="true"
            android:icon="@drawable/ic_spellcheck"
            android:title="@string/nav_featured" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_lightbulb"
            android:title="@string/nav_about" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_about" />
    </group>

    <item android:title="@string/section_title_participate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star"
                android:title="@string/action_rate" />
        </menu>
    </item>

</menu>
