<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/small"
        android:paddingTop="@dimen/small">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/intro_title"
            android:textColor="@color/primary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/large"
            android:paddingRight="@dimen/large"
            android:text="@string/intro_message"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large"
            android:layout_marginRight="@dimen/large"
            android:gravity="center_horizontal"
            android:hint="@string/hint_enter_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/small"
            android:textSize="18sp" />

        <Button
            android:id="@+id/subscribeButton"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xlarge"
            android:layout_marginRight="@dimen/xlarge"
            android:layout_marginTop="@dimen/large"
            android:enabled="false"
            android:text="@string/action_subscribe" />

        <Button
            android:id="@+id/skipButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_skip"
            android:textAllCaps="false"
            android:textColor="@color/primary" />
    </LinearLayout>

</ScrollView>
